--- a/web/src/main/webapp/entete.zul
+++ b/web/src/main/webapp/entete.zul
@@ -9,7 +9,7 @@
 <zk>
 	<window border="none" width="100%" height="100%">
 		<zscript><![CDATA[
-	com.servicelibre.corpus.entity.Corpus corpus = com.servicelibre.controller.ServiceLocator.getCorpusService().getCorpus();
+	com.servicelibre.entities.corpus.Corpus corpus = com.servicelibre.controller.ServiceLocator.getCorpusService().getCorpus();
 ]]></zscript>
 		<div align="center" style="margin-top:10px;">
 			<label sclass="titre1" value="Gestion de corpus en ligne" />
