--- a/web/src/main/webapp/index.zul
+++ b/web/src/main/webapp/index.zul
@@ -24,11 +24,7 @@
 	
 	<tabbox id="corpusTabbox" width="100%" height="90%">
 		<tabs id="corpusTabs" width="100%">
-			<tab id="listeTab" label="Listes" />
-
-			<tab id="contexteTab" label="Contextes" />
-
-			  <tab id="activitésTab" label="Exemples d'activités" />
+			<!-- les Tab sont ajoutés dynamiquement depuis la base de données -->
 		</tabs>
 		
 		<toolbar>
@@ -37,38 +33,9 @@
 		
 		
 		<tabpanels id="corpusTabpanels" width="100%" height="100%">
-		
-		<!-- ************* -->
-		<!-- Onglet Listes -->
-		<!-- ************* -->
-
-			<tabpanel id="listeTabpanel" height="100%">
-	
-				<include id="listeInclude" src="/listes.zul" height="100%"/>
-			
-			</tabpanel>
-			
-		<!-- **************** -->
-		<!-- Onglet Contextes -->
-		<!-- **************** -->
-			
-			
-			<tabpanel id="contexteTabpanel" height="100%">
-			
-				<include id="contexteInclude" src="/contextes.zul" height="100%"/>
-			
-			</tabpanel>
-
-			
-<!-- 			TODO généraliser : x onglets optionnels iframe -->
-		<!-- **************** -->
-		<!-- Onglet Optionnel -->
-		<!-- **************** -->			
-			<tabpanel id="optionnelTabpanel" height="100%">
-				<iframe id="optionnelIframe" src="http://franqus.ca/static_corpus/mels/envrech/activites.html" height="100%" width="100%"/>
-			</tabpanel>
-			
+			<!-- les Tabpanelsont ajoutés dynamiquement depuis la base de données -->
 		</tabpanels>
+		
 	</tabbox>
 
    
