- correction de libellés - externalisation du titre de l'application via entité Paramètre - correction tri par défaut des catégorie de liste - gestion correcte via JPA de la liste primaire des mots

--- a/web/src/main/webapp/contextes.zul
+++ b/web/src/main/webapp/contextes.zul
@@ -56,7 +56,7 @@
 			<tabbox id="tb" width="295px" height="575px"
 				mold="accordion">
 				<tabs>
-					<tab label="Filtre" />
+					<tab label="Filtres" />
 					<tab label="Historique des recherches" />
 					<tab label="Panier des contextes" />
 				</tabs>
