--- a/web/src/main/webapp/listes.zul
+++ b/web/src/main/webapp/listes.zul
@@ -36,9 +36,10 @@
 				</textbox>
 
 				<button id="boutonRecherche" label="Recherche" />
-				<button id="effacerRecherche"
-					image="/images/effacer-2-16x16.png" width="32px"
-					orient="horizontal" tooltiptext="réinitialiser la recherche" />
+				<button id="effacerRecherche" label="Réinitialiser la recherche"
+					 tooltiptext="Réinitialiser la recherche" />
+<!-- 					 image="/images/effacer-2-16x16.png" width="32px" -->
+<!-- 					orient="horizontal" -->
 			</hbox>
 
 			<!-- L'alphabet phonétique est inséré ici dynamiquement -->
@@ -103,21 +104,10 @@
 							</bandbox>
 						</hbox>
 
-						<div align="center" style="margin-top:10px;">
-							<button id="boutonAjoutFiltre"
-								image="/images/flècheBleueBas-16x16.png"
-								hoverImage="/images/flècheVerteBas-16x16.png" width="70px"
-								orient="horizontal" dir="reverse"
-								tooltiptext="ajouter les valeurs sélectionnées du filtre aux filtres actifs" />
-							<button id="boutonEffacerFiltre"
-								image="/images/effacer-2-16x16.png" width="32px"
-								orient="horizontal"
-								tooltiptext="supprimer tous les filtres actifs" />
-						</div>
 
 						<grid id="gridFiltreActif" fixedLayout="true"
 							style="margin-top:10px; border:0px"
-							emptyMessage="Aucun filtre actif." height="255px">
+							emptyMessage="Aucun filtre actif." height="425px">
 							<auxhead sclass="category-center">
 								<auxheader label="Filtres actifs"
 									colspan="2" rowspan="1" />
@@ -125,6 +115,20 @@
 							<columns />
 							<rows />
 						</grid>
+						
+						
+						<div align="center" style="margin-top:10px;">
+<!-- 							<button id="boutonAjoutFiltre" -->
+<!-- 								image="/images/flècheBleueBas-16x16.png" -->
+<!-- 								hoverImage="/images/flècheVerteBas-16x16.png" width="70px" -->
+<!-- 								orient="horizontal" dir="reverse" -->
+<!-- 								tooltiptext="ajouter les valeurs sélectionnées du filtre aux filtres actifs" /> -->
+							<button id="boutonEffacerFiltre" label="Supprimer les filtres actifs"
+								tooltiptext="Supprimer tous les filtres actifs" />
+<!-- 								image="/images/effacer-2-16x16.png" width="32px" -->
+<!-- 								orient="horizontal" -->
+						</div>
+						
 						<popup id="popupHistorique"
 							style="padding:0px; margin:0px;">
 							<vlayout
