- correction conflit guava / zkspring (google-collections - gestion du HTML dans les ListItem - gestion visibilité liste et catégorieliste - ajustement de libellés - nom de la colonne listePrimaire = Paramètre

--- a/web/src/main/webapp/contextes.zul
+++ b/web/src/main/webapp/contextes.zul
@@ -39,8 +39,8 @@
 
 				<button id="boutonRecherche" label="Recherche" />
 
-				<button id="effacerRecherche" label="Réinitialiser la recherche"
-					 tooltiptext="Réinitialiser la recherche" />
+				<button id="effacerRecherche" label="Réinitialise la recherche"
+					 tooltiptext="Réinitialise la recherche" />
 					 <!--
 					 image="/images/effacer-2-16x16.png" width="32px"
 					 orient="horizontal" 
